--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="vWEOH472MCrw8hW0Tg2Jk1bd2it19iDmdJJ0YJQAnK0" />
+  </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
