--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
- 
+ <meta name="google-site-verification" content="DGOa7iZSU2MCjODPLRDsMyzJTkdHieo3yDzDC8Hgwc8" />
   </head>
 <body>
 
