--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  
-  </head>
+  <meta name="google-site-verification" content="HEAhIZfRFUHtN7kayHB5SCL9THI-XLrsKQZ-WLEkOGI" />  </head>
 <body>
 
 <h1>Hello World</h1>
