--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="google-site-verification" content="YPvEfdo5M8ePTshv5H8lEVaVknWKjuDOc1pp8xjAlWA" />  </head>
+    
+  </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
