--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
-  </head>
+<meta name="google-site-verification" content="WN-Dkor4YbRiFNcOftq-4Q30qLp44NzVsjdtDdonyuw" />  </head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
