--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-<meta name="google-site-verification" content="WN-Dkor4YbRiFNcOftq-4Q30qLp44NzVsjdtDdonyuw" />     </head>  
+
+    </head>  
 
     
 <body>
